<resources>
    <!-- Application name -->
    <string name="app_name">Electro Voltage</string>

    <!-- Titles -->
    <string name="calculate_bill_title">Electricity Bill Calculator</string>
    <string name="formula_title">Electricity Rate Formula</string>
    <string name="about_us_title">About Us</string>

    <!-- Buttons -->
    <string name="calculate_button">CALCULATE</string>
    <string name="clear_button">CLEAR</string>

    <!-- Labels -->
    <string name="total_consumption_label">Total Consumption (kWh):</string>
    <string name="rebate_amount_label">Rebate Amount (%):</string>
    <string name="your_estimated_bill">Your estimated bill is RM</string>

    <!-- Table Content -->
    <string name="electricity_rate_formula_title">Electricity Rates</string>
    <string name="electricity_rate_description">The electricity units are charged based on the block used. Refer to the table for the rate:</string>

    <!-- Table Rows -->
    <string name="block_1">For the first 200 kWh (1 - 200 kWh) per month</string>
    <string name="block_1_rate">21.8</string>

    <string name="block_2">For the next 100 kWh (201 - 300 kWh) per month</string>
    <string name="block_2_rate">33.4</string>

    <string name="block_3">For the next 300 kWh (301 - 600 kWh) per month</string>
    <string name="block_3_rate">51.6</string>

    <string name="block_4">For the next 300 kWh (601 per month onwards)</string>
    <string name="block_4_rate">54.6</string>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>
